Cleanup Gradle/Projects
* Merged Utils/Common into Core
* Splitup the Gradle into subGradle files